tests/ui/const-generics/issues/issue-74950.min.stderr
error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:19:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:19:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:19:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:19:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: aborting due to 4 previous errors

